force-app/main/default/objects/Prospect__c/fields/Business_Development_Executive__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Executive</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>BDE</relationshipName>
    <type>Lookup</type>
</CustomField>