force-app/main/default/objects/Prospect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Prospect_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>